--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Akan project</title>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   </head>
   <body>
 
