linked the index.html file with jquery-3.5.1.js file in the js folder

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Akan project</title>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha384-/LjQZzcpTzaYn7qWqRIWYC5l8FWEZ2bIHIz0D73Uzba4pShEcdLdZyZkI4Kv676E" crossorigin="anonymous"></script>
   </head>
   <body>
 
