introduced inline elements inside the header namely;<strong>element,and <em> inline element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>AKAN Calculator</h1>
+      <h1><strong><em>AKAN Calculator</em></strong></h1>
 
     </div>
 
