introduced a paragraph,inside it also added an inline element<em> to describe what the application does

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="container">
       <h1><strong><em>AKAN Calculator</em></strong></h1>
+      <p><em>this is a special age calculator that simply requires users input down below and then outputs their inputs in to Akan names</em></p>
 
     </div>
 
