introduced a header 2 with a<strong> inline element and a small statement to simply show where the user should input his/her value

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <div class="container">
       <h1><strong><em>AKAN Calculator</em></strong></h1>
-      <p><em>this is a special age calculator that simply requires users input down below and then outputs their inputs in to Akan names</em></p>
+      <p><em>This is a special age calculator, that simply requires users input down below and then outputs their inputs in to Akan names</em></p>
+      <h2><strong>Fill in the blank spaces below to get your Akan names</strong></h2>
 
     </div>
 
