introduced a div id blanks together with a <form>tag and also a div class named form-group

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
       <h1><strong><em>AKAN Calculator</em></strong></h1>
       <p><em>This is a special age calculator, that simply requires users input down below and then outputs their inputs in to Akan names</em></p>
       <h2><strong>Fill in the blank spaces below to get your Akan names</strong></h2>
+      <div id="blanks">
+        <form>
+          <div class="form-group">
+            <label for="person1">A name</label>
+            <input id="person1" class="form-control" type="text">
+
+          </div>
+
+        </form>
+
+      </div>
 
     </div>
 
