introduced a <ul> with a simple statement inside<p> to show users real name and a <li>with a <span>class inside which should output users inputed name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 
       </div>
       <div id="description">
-        
+        <ul>
+          <p>Users real name</p>
+          <li><span class="person1"</span></li>
+
+        </ul>
+
+
 
       </div>
 
