--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <label for="person1">A name</label>
             <input id="person1" class="form-control" type="text">
           </div>
+          <div class="form-group">
+            <label for="person1">Birthday</label>
+            <input id="person1" class="form-control" type="text">
+          </div>
 
         </form>
 
