--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input id="person1" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="person1">Birthday</label>
+            <label for="Birthday">Birthday</label>
             <input id="person1" class="form-control" type="text">
           </div>
 
