introduced button class

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <label for="Birthday">Birthday</label>
             <input id="person1" class="form-control" type="text">
           </div>
+          <button type="submit" class="btn">Details</button>
 
         </form>
 
