added checkboxes and date as forms of input

--- a/index.html
+++ b/index.html
@@ -19,9 +19,24 @@
             <label for="person1">A name</label>
             <input id="person1" class="form-control" type="text">
           </div>
+          <p>choose gender type.</p>
+          <div class="radio">
+            <label>
+              <input type="radio" name="gender" value="male" checked> male
+            </label>
+            <div class="radio">
+              <label>
+                <input type="radio" name="gender" value="female" checked> female
+              </label>
+
+            </div>
+
+          </div>
           <div class="form-group">
-            <label for="Birthday">Birthday</label>
-            <input id="person1" class="form-control" type="text">
+              <label for="born">Date of birth:</label>
+              <input id="born" class="form-control" type="date">
+          </div>
+
           </div>
           <button type="submit" class="btn">Details</button>
 
@@ -32,6 +47,8 @@
         <ul>
           <p>Users real name</p>
           <li><span class="person1"</span></li>
+            <p>users Akan name</p>
+            <li><div id="output"> </div></li>
 
         </ul>
 
