added a div id of output to output the result below the form in both index.html file and scripts.js

--- a/index.html
+++ b/index.html
@@ -42,20 +42,15 @@
 
         </form>
 
-      </div>
       <div id="description">
         <ul>
-          <p>Users real name</p>
+          <p><strong>Users real name</strong></p>
           <li><span class="person1"</span></li>
-            <p>users Akan name</p>
+            <p><strong><em>users Akan name</em></strong></p>
             <li><div id="output"> </div></li>
 
         </ul>
-
-
-
       </div>
-
     </div>
 
   </body>
